[project]
name = "tg-iotans"
version = "1.0.1"
description = "Telegram client for receiving water consumption data from IotansBot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Dzianis Nikifaraŭ", email = "dzianis@wirgen.by" }
]
keywords = ["telegram", "iotans", "iotansbot", "water"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "telethon"
]

[project.urls]
Homepage = "https://github.com/wirgen/tg-iotans"

[project.scripts]
tg-iotans = "tg_iotans.__main__:run"

[tool.setuptools.packages.find]
include = ["tg_iotans"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"